# usual-nano

./: .gitignore  .gitmodules  LICENSE.md  README.md  nanorc  pyproject.toml
etc/: cua-2.nanorc  dev.nanorc  gnu+cua.nanorc  home-user.inputrc  keymap-man5.nanorc  malone.nanorc  nanorc.bak  notepad.nanorc  sample123.nanorc  system.sheme.nanorc
examples/: options-man5.nanorc
